test/interpreter/error/err_01_div_zero.pl0
program divzero; 
var x;  
begin 
    x := 1 / 0; 
end